Fix: Update paths and permissions for better compatibility

--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,14 @@
   "description": "Experience masterpieces from world-renowned museums in every new tab",
   "permissions": [
     "https://api.artic.edu/*",
-    "https://www.artic.edu/*"
+    "https://www.artic.edu/*",
+    "storage",
+    "tabs"
   ],
   "chrome_url_overrides": {
     "newtab": "src/html/newtab.html"
   },
-  "content_security_policy": "default-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://fonts.gstatic.com; img-src 'self' https://www.artic.edu https://api.artic.edu data: blob:; connect-src 'self' https://api.artic.edu https://www.artic.edu; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'",
+  "content_security_policy": "script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; object-src 'self'; img-src 'self' https://www.artic.edu https://api.artic.edu data: blob:; connect-src 'self' https://api.artic.edu https://www.artic.edu; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;",
   "browser_specific_settings": {
     "gecko": {
       "id": "artelier-tab@arteliertab.com",
